--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
             </div>
 
-            <div class="photo-credit">Photo by Halie West on Unsplash</div>
+            <div class="photo-credit">
+                <p>Photo by Halie West on Unsplash </p>
+            </div>
 
         </div>
 
