--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             <p>You <em>know</em> you want to.</p>
 
             <form>
-                <div class="input-section">
+                <div class="inputs-section">
                     <div class="inputs">
+                        <p>Let's do This!</p>
                         <div>
                             <div>
                                 <label for="first-name">FIRST NAME</label>
